# openapi_to_mcp_server

./: .gitignore  Dockerfile  README.md  pyproject.toml  server.py
src/main/: server.py
src/main/templates/: api_requests_generator.jinja2
src/main/utils/: dir.py  dto.py  file_helper.py  generate_fn.py  misc.py  mylogger.py  openapi_to_tools.py
src/templates/: api_requests_generator.md
src/utils/: ToolsGenerator.py  file_helper.py  mylogger.py  openapi_processor.py
