[project]
name = "iris"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4",
    "mcp[cli]>=1.22.0",
    "requests>=2.32.5",
]

[project.scripts]
dev = "PYTHONPATH=. env=docker uv run iris/server.py"
inspector-cmd = "DANGEROUSLY_OMIT_AUTH=true npx @modelcontextprotocol/inspector uv run iris/server.py"
inspector-streamable-http = "npx @modelcontextprotocol/inspector http://localhost:8000/mcp"
