[project]
name = "iris"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4",
    "jinja2>=3.1.6",
    "mcp[cli]>=1.22.0",
    "requests>=2.32.5",
]

[project.scripts]
dev = "SERVERS=https://petstore3.swagger.io/api/v3/openapi.json uv run server.py"
inspector = "DANGEROUSLY_OMIT_AUTH=true npx @modelcontextprotocol/inspector http://localhost:8000/mcp"
